update all pages

--- a/about.html
+++ b/about.html
@@ -7,10 +7,12 @@
 
 	<!-- Stylesheets
 	============================================= -->
-	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <style>
+      @font-face { font-family: Brown-font; src: url('Brown-Regular.TTF');
+        } 
+    </style>
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
@@ -23,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>About Me | Canvas</title>
+	<title>About</title>
 
 </head>
 
@@ -75,10 +77,10 @@
 									<a class="menu-link" href="index.html"><div>Home</div></a>
 								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="#"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="#"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>About</div></a>
 								</li>
 							</ul>
 
@@ -99,8 +101,8 @@
 		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 250px 0; background-image: url(); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 440px;" data-top-bottom="background-position:0px -700px;">
 
 			<div class="container clearfix">
-                <div class="col-lg-6">
-				    <span>trying to understand our</span> 
+                <div class="col-lg-6"> 
+                    <h3>trying to understand our</h3>
                     <h1>xarxes</h1>
 				    <span> text, textile, and technology all originate from the same Proto-indo-european language family. I believe that recognizing and respecting our roots,  and the complexity of our natural ecosystems and social networks can help us design a more sustainable and harmonious future.    </span>
 			
@@ -116,7 +118,7 @@
 
 					<div class="row">
 						<div class="col-lg-6">
-							<h3>Teks</h3>
+							<h3>"Teks"</h3>
 
 							<p>A knitted fabric relies on one thread to hold the entire structure together and when cut a single point, it can be unravelled completely. In contrast, a woven relies on countless individual threads and will retain its structure even when slashed several times. To build a reslient system we can look to a diversity of individuals, inputs and intelligences. Our diverse skills, knowlegde, and attititudes exist in relation to each other and as we develop them, we strengthen our networks on a personal, community and global level. Below, you’ll see my own personal weaving project.  </p>
 						</div>
