--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 									<a class="menu-link" href="index.html"><div>Home</div></a>
 								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="#"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="#"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>About</div></a>
 								</li>
 							</ul>
 
