--- a/Modules.html
+++ b/Modules.html
@@ -162,7 +162,7 @@
 							<div class="grid-inner">
 								<!-- Image: Start -->
 								<div class="portfolio-image">
-									<a href="Bootcamp.html">
+									<a href="Design%20Studio%2001.html">
 										<img src="images/blog/full/Design%20Studio%2001.png" alt="Bootcamp">
 									</a>
 									<!-- Overlay: Start -->
@@ -170,7 +170,7 @@
 										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
 											<!-- Decription: Start -->
 											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="Bootcamp.html">Design Studio 01</a></h3>
+												<h3><a href="Design%20Studio%2001.html">Design Studio 01</a></h3>
 												<span><a href="#"></a><a href="#"></a></span>
 											</div>
 											<!-- Description: End -->
