try again edit modules

--- a/Modules.html
+++ b/Modules.html
@@ -176,7 +176,7 @@
 											<!-- Description: End -->
 											<div class="d-flex">
 												<a href="images/blog/full/Design%20Studio%2001.png" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInUpSmall" data-hover-animate-out="fadeOutDownSmall" data-hover-speed="350" data-lightbox="image" title="Image"><i class="icon-line-plus"></i></a>
-												<a href="Bootcamp.html" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInUpSmall" data-hover-animate-out="fadeOutDownSmall" data-hover-speed="350"><i class="icon-line-ellipsis"></i></a>
+												<a href="Design%20Studio%2001.html" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInUpSmall" data-hover-animate-out="fadeOutDownSmall" data-hover-speed="350"><i class="icon-line-ellipsis"></i></a>
 											</div>
 										</div>
 										<div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
