color change edit files

--- a/Design Studio 01.html
+++ b/Design Studio 01.html
@@ -44,8 +44,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo-green.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo-green@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
@@ -95,7 +95,7 @@
 
 		<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 6000px 0; background-image: url(images/Design%20Space%20new.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 955px;" data-top-bottom="background-position:0px -15880px;">
+		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 6000px 0; background-image: url(images/Design%20Space_29%20oct.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 1140px;" data-top-bottom="background-position:0px -19000px;">
 		</section><!-- #page-title end -->
     
 
