--- a/Modules.html
+++ b/Modules.html
@@ -44,8 +44,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo-green.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo-green@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
@@ -104,6 +104,11 @@
 		<section id="content">
 			<div class="content-wrap">
 				<div class="container clearfix">
+                    
+                    <div class="entry-image align-wide-full my-3">
+								<a href="#"><img src="images/modules_header.png" alt="Bootcamp"></a>
+                                
+							</div><!-- .entry-image end -->
 
 					<!-- Portfolio Items
 					============================================= -->
