--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo-green.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo-green@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
@@ -95,7 +95,7 @@
 
 		<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 600px 0; background-image: url(images/About_lg_full.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 600px;" data-top-bottom="background-position:0px -1500px;">
+		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 550px 0; background-image: url(images/About_header.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 600px;" data-top-bottom="background-position:0px -1000px;">
 		</section><!-- #page-title end -->
 
 		<!-- Content
