--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo-green.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo-green@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
@@ -93,7 +93,7 @@
 		</header><!-- #header end -->
 
 		<section id="slider" class="slider-element min-vh-100 dark include-header">
-			<div class="slider-inner" style="background-image: url(images/Index.png);background-position: 50% 0;">
+			<div class="slider-inner" style="background-image: url(images/Home.png);background-position: 50% 0;">
 
 				<div class="container">
 				</div>
