--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 
 		<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 550px 0; background-image: url(images/About_header.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 600px;" data-top-bottom="background-position:0px -1000px;">
+		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 550px 0; background-image: url(images/About_header.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 500px;" data-top-bottom="background-position:0px -1000px;">
 		</section><!-- #page-title end -->
 
 		<!-- Content
@@ -110,7 +110,7 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="dark">
+		<footer id="footer" class="light">
 
 			<!-- Copyrights
 			============================================= -->
