--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="dark">
+		<footer id="footer" class="light">
 
 			<!-- Copyrights
 			============================================= -->
