--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
     <style>
       @font-face { font-family: Brown-font; src: url('Brown-Regular.TTF');
-        } 
+        }
     </style>
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
@@ -112,7 +112,7 @@
 					<div class="row col-mb-30">
 
 						<div class="col-md-6 text-center text-md-start">
-							&copy; Copyright 2021 Julia Steketee<br>
+							&copy; Copyright 2021 Julia Steketee.<br>
 						</div>
 
 						<div class="col-md-6 text-center text-md-end">
