--- a/tech-beyond-the-myth.html
+++ b/tech-beyond-the-myth.html
@@ -37,7 +37,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="full-header transparent-header dark" data-sticky-class="not-dark">
+		<header id="header" class="full-header transparent-header light" data-sticky-class="not-dark">
 			<div id="header-wrap">
 				<div class="container">
 					<div class="header-row">
@@ -48,6 +48,7 @@
 							<a href="index.html" class="standard-logo" data-dark-logo="images/ju-logo-dark.png"><img src="images/ju-logo-green.png" alt="Canvas Logo"></a>
 							<a href="index.html" class="retina-logo" data-dark-logo="images/ju-logo-dark@2x.png"><img src="images/ju-logo-green@2x.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
+
 						<div class="header-misc">
 
 							<!-- Top Search
@@ -72,11 +73,14 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
+                                <li class="menu-item">
+									<a class="menu-link" href="design-space.html"><div>design space</div></a>
+								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="about.html"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>about</div></a>
 								</li>
 							</ul>
 
@@ -91,7 +95,13 @@
 			</div>
 			<div class="header-wrap-clone"></div>
 		</header><!-- #header end -->
+        <section id="slider" class="slider-element min-vh-100 dark include-header">
+			<div class="slider-inner" style="background-image: url(images/Headers/tech-beyond-the-myth-header.svg);background-position: 50% 0;">
 
+				<div class="container">
+				</div>
+			</div>
+		</section>
 		<!-- Page Title
 		============================================= -->
 		
@@ -118,17 +128,7 @@
 
 							<!-- Entry Image
 							============================================= -->
-							<div class="entry-image align-wide-full my-3">
-								<a href="#"><img src="images/atlas%20of%20weak%20signals_header.png" alt="Atlas of Weak Signals"></a>
-                                
-                                 <br>
-                            <br>
-                            <br>
-                            <br>
-                                <a href="#"><img src="images/blog/full/Atlas%20of%20Weak%20Signals.png" alt="Atlas of Weak Signals"></a>
-								<figcaption class="text-center mt-2 text-muted text-smaller">Above, I have mapped out the attitudes, knowledge and skills that I anticipate and aim to gain from this module </figcaption>
-							</div><!-- .entry-image end -->
-
+							
 							<div class="clear"></div>
 
 							<!-- Entry Content
