--- a/about.html
+++ b/about.html
@@ -73,16 +73,18 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
+                                <li class="menu-item">
+									<a class="menu-link" href="design-space.html"><div>design space</div></a>
+								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="about.html"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>about</div></a>
 								</li>
 							</ul>
 
 						</nav><!-- #primary-menu end -->
-
 						<form class="top-search-form" action="search.html" method="get">
 							<input type="text" name="q" class="form-control" value="" placeholder="Type &amp; Hit Enter.." autocomplete="off">
 						</form>
