--- a/design-space.html
+++ b/design-space.html
@@ -72,12 +72,14 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-				
+                                <li class="menu-item">
+									<a class="menu-link" href="design-space.html"><div>design space</div></a>
+								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="about.html"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>about</div></a>
 								</li>
 							</ul>
 
