--- a/design-studio-main.html
+++ b/design-studio-main.html
@@ -96,7 +96,7 @@
 		</header><!-- #header end -->
 
 		<section id="slider" class="slider-element min-vh-100 dark include-header">
-			<div class="slider-inner" style="background-image: url(images/Headers/modules-header.svg);background-position: 50% 0;">
+			<div class="slider-inner" style="background-image: url(images/Headers/design-studio-header.svg);background-position: 50% 0;">
 
 				<div class="container">
 				</div>
@@ -128,7 +128,7 @@
 							<div class="grid-inner">
 								<!-- Image: Start -->
 								<div class="portfolio-image">
-									<a href="design-studio-main.html">
+									<a href="design-studio-reflections.html">
 										<img src="images/blog/full/Design%20Studio%2001.png" alt="Design Studio">
 									</a>
 									<!-- Overlay: Start -->
@@ -136,7 +136,7 @@
 										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
 											<!-- Decription: Start -->
 											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="design-studio-main.html"><br>Design Studio</a></h3>
+												<h3><a href="design-studio-reflections.html"><br>Reflections</a></h3>
 												<span><a href="#"></a><a href="#"></a></span>
 											</div>
 											<!-- Description: End -->
@@ -157,13 +157,13 @@
 						<article class="portfolio-item col-12 pf-illustrations">
 							<div class="grid-inner">
 								<div class="portfolio-image">
-									<a href="Bootcamp.html">
+									<a href="bio-material-research.html">
 										<img src="images/blog/full/Bootcamp.png" alt="Bootcamp">
 									</a>
 									<div class="bg-overlay">
 										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
 											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="Bootcamp.html"><br>Bootcamp</a></h3>
+												<h3><a href="bio-material-research.html"><br>Bio-material Research</a></h3>
 												<span><a href="#"></a></span>
 											</div>
 
@@ -180,13 +180,13 @@
                         <article class="portfolio-item col-12 pf-illustrations">
 							<div class="grid-inner">
 								<div class="portfolio-image">
-									<a href="atlas-of-weak-signals.html">
+									<a href="my-circular-apartment.html">
 										<img src="images/blog/full/Atlas%20of%20Weak%20Signals.png" alt="Atlas of Weak Signals">
 									</a>
 									<div class="bg-overlay">
 										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
 											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="atlas-of-weak-signals.html"><br>Atlas of Weak Signals</a></h3>
+												<h3><a href="my-circular-apartment.html"><br>My Circular Apartment</a></h3>
 												<span><a href="#"></a></span>
 											</div>
 
@@ -203,57 +203,13 @@
 						<article class="portfolio-item col-12 pf-illustrations">
 							<div class="grid-inner">
 								<div class="portfolio-image">
-									<a href="bio-and-agri-zero.html">
+									<a href="bioma.html">
 										<img src="images/blog/full/Bio%20and%20Agri%20Zero.png" alt="Atlas of Weak Signals">
 									</a>
 									<div class="bg-overlay">
 										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
 											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="bio-and-agri-zero.html"><br>Bio and Agri Zero</a></h3>
-												<span><a href="#"></a></span>
-											</div>
-
-											<div class="d-flex">
-												
-											</div>
-										</div>
-										<div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
-									</div>
-								</div>
-							</div>
-						</article>
-                        <article class="portfolio-item col-12 pf-illustrations">
-							<div class="grid-inner">
-								<div class="portfolio-image">
-									<a href="living-with-your-own-ideas.html">
-										<img src="images/blog/full/Living%20with%20your%20own%20ideas.png" alt="Atlas of Weak Signals">
-									</a>
-									<div class="bg-overlay">
-										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
-											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="living-with-your-own-ideas.html"><br>Living with your own ideas</a></h3>
-												<span><a href="#"></a></span>
-											</div>
-
-											<div class="d-flex">
-												
-											</div>
-										</div>
-										<div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
-									</div>
-								</div>
-							</div>
-						</article>
-                        <article class="portfolio-item col-12 pf-illustrations">
-							<div class="grid-inner">
-								<div class="portfolio-image">
-									<a href="tech-beyond-the-myth.html">
-										<img src="images/blog/full/Tech%20beyond%20the%20myth.png" alt="Atlas of Weak Signals">
-									</a>
-									<div class="bg-overlay">
-										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
-											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
-												<h3><a href="tech-beyond-the-myth.html"><br>Tech Beyond the Myth</a></h3>
+												<h3><a href="bioma.html"><br>Bioma</a></h3>
 												<span><a href="#"></a></span>
 											</div>
 
