living with your own idea and circular apartment

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		</header><!-- #header end -->
 
 		<section id="slider" class="slider-element min-vh-100 dark include-header">
-			<div class="slider-inner" style="background-image: url(images/Home.png);background-position: 50% 0;">
+			<div class="slider-inner" style="background-image: url(images/index.svg);background-position: 50% 0;">
 
 				<div class="container">
 				</div>
