--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
 		<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 550px 0; background-image: url(images/About_header.png); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 500px;" data-top-bottom="background-position:0px -1000px;">
+		<section id="page-title" class="page-title-parallax page-title-dark page-title-left include-header" style="padding: 550px 0; background-image: url(images/about-header.svg); background-size: cover; background-position: center center;" data-bottom-top="background-position:0px 950px;" data-top-bottom="background-position:0px -1500px;">
 		</section><!-- #page-title end -->
 
 		<!-- Content
