--- a/bioma.html
+++ b/bioma.html
@@ -25,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Atlas of Weak Signals</title>
+	<title>Bioma</title>
 
 </head>
 
