--- a/design-studio-main.html
+++ b/design-studio-main.html
@@ -24,7 +24,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Modules</title>
+	<title>Design Studio</title>
 
 </head>
 
