--- a/tech-beyond-the-myth.html
+++ b/tech-beyond-the-myth.html
@@ -25,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Atlas of Weak Signals</title>
+	<title>Tech Beyond the Myth</title>
 
 </head>
 
@@ -292,6 +292,26 @@
 								<figcaption class="text-center mt-2 text-muted text-smaller">replace or re-order</figcaption>
 							</div><!-- .entry-image end --> 
                                
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <div class="entry-image align-wide-full my-3">
+								<a href="#"><img src="images/almost-useless-machines-concept.jpeg" alt="Green Street"></a>
+								<figcaption class="text-center mt-2 text-muted text-smaller">replace or re-order</figcaption>
+							</div><!-- .entry-image end --> 
+                               <div class="entry-image align-wide-full my-3">
+								<a href="#"><img src="images/almost-useless-machines-bazaar.jpeg" alt="Green Street"></a>
+								<figcaption class="text-center mt-2 text-muted text-smaller">replace or re-order</figcaption>
+							</div><!-- .entry-image end --> 
+                                 <div class="entry-image align-wide-full my-3">
+								<a href="#"><img src="images/almost-useless-machines-concept-2.jpeg" alt="Green Street"></a>
+								<figcaption class="text-center mt-2 text-muted text-smaller">replace or re-order</figcaption>
+							</div><!-- .entry-image end --> 
+                               <div class="entry-image align-wide-full my-3">
+								<a href="#"><img src="images/almost-useless-machines-concept-3.jpeg" alt="Green Street"></a>
+								<figcaption class="text-center mt-2 text-muted text-smaller">replace or re-order</figcaption>
+							</div><!-- .entry-image end --> 
                                 <br>
                                 <br>
 							</div>
