--- a/design-space.html
+++ b/design-space.html
@@ -24,7 +24,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Design Studio 01</title>
+	<title>Design Space</title>
 
 </head>
 
