--- a/design-studio-reflections.html
+++ b/design-studio-reflections.html
@@ -25,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Atlas of Weak Signals</title>
+	<title>Design Studio Reflections</title>
 
 </head>
 
