--- a/my-circular-apartment.html
+++ b/my-circular-apartment.html
@@ -25,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Atlas of Weak Signals</title>
+	<title>My Circular Apartment</title>
 
 </head>
 
