--- a/design-space.html
+++ b/design-space.html
@@ -8,9 +8,9 @@
 	<!-- Stylesheets
 	============================================= -->
 	 <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-    <style>
-      @font-face { font-family: Brown-font; src: url('Brown-Regular.TTF');
-        } 
+     <style>
+      @font-face { font-family: Brown-font; src: url(Brown-Regular.ttf);
+        }  
     </style>
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
