--- a/design-studio-reflections.html
+++ b/design-studio-reflections.html
@@ -9,7 +9,7 @@
 	============================================= -->
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
     <style>
-      @font-face { font-family: Brown-font; src: url('Brown-Regular.TTF');
+      @font-face { font-family: Brown-font; src: url(Brown-Regular.ttf);
         } 
     </style>
 	<link rel="stylesheet" href="style.css" type="text/css" />
