--- a/living-with-your-own-ideas.html
+++ b/living-with-your-own-ideas.html
@@ -246,7 +246,7 @@
                                 <p>Later on I went scavenging for fallen leaves for my compost and materials that I could use to build a solar dehydrator and molds for my bio materials. I found a used electric heater that I would later hook up to a solar panel and a box with slots for shelving. Later I would add shelves, a back panel and a front door and connect the heating system into the bottom in order to create a convection current inside. </p><br><br>
                                 
                                   <div class="entry-image align-wide-full my-3">
-								<iframe width="900" height="700" src="https://www.youtube.com/watch?v=GU4mBDBim18" frameborder="0" allowfullscreen></iframe>
+								<iframe width="900" height="700" src="https://player.vimeo.com/video/649014377?h=274ba32073&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allowfullscreen></iframe>
       
 								<figcaption class="text-center mt-2 text-muted text-smaller"> </figcaption>
 							</div><!-- .entry-image end -->
