--- a/tech-beyond-the-myth.html
+++ b/tech-beyond-the-myth.html
@@ -372,7 +372,7 @@
                                 https://youtu.be/CO0cXuxjBes
                                 
                                 <div class="entry-image align-wide-full my-3">
-								<iframe width="900" height="700" src="https://youtu.be/CO0cXuxjBes" frameborder="0" allowfullscreen></iframe>
+								<iframe width="900" height="700" src="https://player.vimeo.com/video/649085817?h=c4f73bd8d4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"  frameborder="0" allowfullscreen></iframe>
       
 								<figcaption class="text-center mt-2 text-muted text-smaller"> </figcaption>
 							</div><!-- .entry-image end -->
