--- a/Modules.html
+++ b/Modules.html
@@ -266,6 +266,28 @@
 								</div>
 							</div>
 						</article>
+                         <article class="portfolio-item col-12 pf-illustrations">
+							<div class="grid-inner">
+								<div class="portfolio-image">
+									<a href="community-engagement.html">
+										<img src="images/blog/full/Community%20Engagement.png" alt="Community Engagement">
+									</a>
+									<div class="bg-overlay">
+										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
+											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
+												<h3><a href="community-engagement.html"><br>Community Engagement</a></h3>
+												<span><a href="#"></a></span>
+											</div>
+
+											<div class="d-flex">
+												
+											</div>
+										</div>
+										<div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+									</div>
+								</div>
+							</div>
+						</article>
 					</div><!-- #portfolio end -->
 
 				</div>
