--- a/design-studio-main.html
+++ b/design-studio-main.html
@@ -222,6 +222,28 @@
 								</div>
 							</div>
 						</article>
+                        <article class="portfolio-item col-12 pf-illustrations">
+							<div class="grid-inner">
+								<div class="portfolio-image">
+									<a href="mycelium-workshop.html">
+										<img src="images/blog/full/Bio%20and%20Agri%20Zero.png" alt="Mycelium Workshop">
+									</a>
+									<div class="bg-overlay">
+										<div class="bg-overlay-content dark flex-column" data-hover-animate="fadeIn">
+											<div class="portfolio-desc pt-0 center" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeOutUpSmall" data-hover-speed="350">
+												<h3><a href="mycelium-workshop.html"><br>Mycelium Workshop</a></h3>
+												<span><a href="#"></a></span>
+											</div>
+
+											<div class="d-flex">
+												
+											</div>
+										</div>
+										<div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+									</div>
+								</div>
+							</div>
+						</article>
 					</div><!-- #portfolio end -->
 
 				</div>
