--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
 							<ul class="menu-container">
                                 <li class="menu-item">
-									<a class="menu-link" href="design-space.html"><div>design space</div></a>
+									<a class="menu-link" href="https://julia-steketee.webflow.io"><div>design space</div></a>
 								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="Modules.html"><div>modules</div></a>
+									<a class="menu-link" href="https://julia-steketee.webflow.io/"><div>modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="about.html"><div>about</div></a>
+									<a class="menu-link" href="https://julia-steketee.webflow.io/"><div>about</div></a>
 								</li>
 							</ul>
 
