--- a/index.html
+++ b/index.html
@@ -73,14 +73,9 @@
 
 							<ul class="menu-container">
                                 <li class="menu-item">
-									<a class="menu-link" href="https://julia-steketee.webflow.io"><div>design space</div></a>
+									<a class="menu-link" href="https://julia-steketee.webflow.io"><div>enter</div></a>
 								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="https://julia-steketee.webflow.io/"><div>modules</div></a>
-								</li>
-								<li class="menu-item mega-menu">
-									<a class="menu-link" href="https://julia-steketee.webflow.io/"><div>about</div></a>
-								</li>
+								
 							</ul>
 
 						</nav><!-- #primary-menu end -->
@@ -96,7 +91,7 @@
 		</header><!-- #header end -->
 
 		<section id="slider" class="slider-element min-vh-100 dark include-header">
-			<div class="slider-inner" style="background-image: url(images/Index.png);background-position: 50% 0;">
+			<div class="slider-inner" style="background-image: url(images/Index-redirect.svg);background-position: 50% 0;">
 
 				<div class="container">
 				</div>
